# robot-sim

./: README.md
Arduino/: DeadManSwitch.h  PID.h  RomiRPiSlave.ino
docs/: accuracy_testing.md  bluetooth_controller.md  create_img.md  demo.md  lidar.md  multiple_machines.md  power.md  ros_control.md  ros_ip_setup.md  rpi_camera.md  rpi_setup.md  slam.md  teleop_twist_keyboard.md  two_robots_rviz.md  wifi_ap.md
docs/files/CAD/: lidar_mount.stl
my_robot/: CMakeLists.txt  package.xml
my_robot/config/: controllers.yaml  mapper_params_online_async.yaml  romi_config.rviz
my_robot/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot2_core.xacro  robot_core.xacro
my_robot/description/meshes/: left_wheel2.stl  right_wheel2.stl
my_robot/description/urdf/: romi.urdf.xacro  romi_core.xacro  romi_lidar.xacro
my_robot/launch/: joy_controller.launch  keyboard_control.launch  one_robot_sim.launch  romi_base.launch  romi_control.launch  romi_description.launch  romi_gazebo.launch  romi_real.launch  romi_rviz.launch  romi_sim.launch  slam.launch  test_urdf.launch  two_robots_sim.launch
my_robot/scripts/: a_star.py  draw_circle.py  move_drone_2.py  move_drone_pub.py  robot_interface_node.py
my_robot/worlds/: test.world  traffic_cone.world
romi_base/: CMakeLists.txt  package.xml
romi_base/include/romi_base/: a_star.h  romi_hw_interface.h
romi_base/launch/: romi_hw.launch
romi_base/src/: a_star.cpp  romi_base.cpp  romi_hw_interface.cpp
romi_camera/: CMakeLists.txt  package.xml
romi_camera/launch/: romi_camera_node.launch
romi_camera/src/: romi_camera_node.cpp
romi_lidar/: package.xml
romi_lidar/launch/: ld19.launch
romi_lidar/src/: lipkg.cpp
romi_ultrasonic/: CMakeLists.txt  package.xml
