<?xml version="1.0"?>
<package format="2">
  <name>romi_base</name>
  <version>0.0.0</version>
  <description>The romi_base package</description>
  <maintainer email="charlie@todo.todo">charlie</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>diff_drive_controller</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosparam_shortcuts</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>

  </export>
</package>
